// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`when system check fails > shows error when git is missing > system-check-failure 1`] = `
" Confidence by Spotify                                              https://confidence.spotify.com/

 System Check                                                         Todo (0/6)

 Checking that your system has everything we need.                    ✘ Check system
                                                                      ○ Log in to Confidence
 ✔ Node.js vX.Y.Z                                                     ○ Select features
 ✘ Git                                                                ○ Set up your agent
                                                                      ○ Connect tools
 Some required tools are missing. Install them and retry.             ○ Onboard project


 ──────────────────────────────────────────────────────────────────────────────────────────────────
 Required tools are missing.

 ❯ Retry
   Quit

 ↑↓ navigate   enter confirm                                                                 vX.Y.Z"
`;

exports[`when system check fails > shows error when node is not on PATH > system-check-node-missing 1`] = `
" Confidence by Spotify                                              https://confidence.spotify.com/

 System Check                                                         Todo (0/6)

 Checking that your system has everything we need.                    ✘ Check system
                                                                      ○ Log in to Confidence
 ✘ Node.js                                                            ○ Select features
 ✔ Git X.Y.Z                                                          ○ Set up your agent
                                                                      ○ Connect tools
 Some required tools are missing. Install them and retry.             ○ Onboard project


 ──────────────────────────────────────────────────────────────────────────────────────────────────
 Required tools are missing.

 ❯ Retry
   Quit

 ↑↓ navigate   enter confirm                                                                 vX.Y.Z"
`;
